--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
 		"dotenv": "^16.0.3",
 		"ffmpeg-static": "^5.1.0",
 		"libsodium-wrappers": "^0.7.10",
-		"ytdl-core": "^4.11.2",
-		"node": "^18.12.1"
+		"node": "^18.12.1",
+		"play-dl": "^1.9.6"
 	},
 	"devDependencies": {
 		"eslint": "^8.31.0"
