--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"start": "node .",
+		"server start": " node . && node src/api/server",
 		"deploy": "node src/deploy-commands"
 	},
 	"keywords": [],
@@ -15,6 +16,7 @@
 		"@discordjs/voice": "^0.14.0",
 		"discord.js": "^14.7.1",
 		"dotenv": "^16.0.3",
+		"express": "^4.18.2",
 		"ffmpeg-static": "^5.1.0",
 		"libsodium-wrappers": "^0.7.10",
 		"node": "^18.12.1",
