--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"main": "src/app.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"start": "node .",
+		"start": "node src/app",
 		"build": "node src/deploy-commands"
 	},
 	"keywords": [],
