--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
 		"libsodium-wrappers": "^0.7.10",
 		"play-dl": "^1.9.6"
 	},
+	"engines": {
+		"node": "^18.2.1"
+	},
 	"devDependencies": {
 		"eslint": "^8.31.0"
 	}
